--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,13 @@
-sonar.host.url=https://sonarcloud.io
-sonar.projectKey=JavaScriptTraining
+sonar.projectKey=priscila225_JavaScriptTraining
 sonar.organization=priscila225
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
-sonar.sources=./src
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=JavaScriptTraining
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
